--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.10",
+    "@upstash/redis": "^1.35.0",
     "next": "14.2.29",
     "react": "^18",
     "react-dom": "^18",
